--- a/build.gradle
+++ b/build.gradle
@@ -102,9 +102,11 @@ allprojects {
                 {
                     maven {
                         url "${artifactory_contextUrl}/ext-tools-local"
+                        content {
+                            includeGroup "org.labkey.tools"
+                        }
                     }
                     maven {
-
                         url "${artifactory_contextUrl}/libs-release-no-proxy"
 
                         if (project.hasProperty('artifactory_user') && project.hasProperty('artifactory_password'))
@@ -116,6 +118,9 @@ allprojects {
                             authentication {
                                 basic(BasicAuthentication)
                             }
+                        }
+                        mavenContent {
+                            releasesOnly()
                         }
                     }
                     maven {
@@ -131,7 +136,16 @@ allprojects {
                                 basic(BasicAuthentication)
                             }
                         }
+                        mavenContent {
+                            snapshotsOnly()
+                        }
+                        content {
+                            includeGroup "org.labkey"
+                            includeGroup "org.labkey.api"
+                            includeGroup "org.labkey.module"
+                        }
                     }
+
 // Temporarily uncomment the block below and update the four-digit number to allow building with Tomcat versions that
 // haven't been released yet. The "VOTE" emails sent to the Tomcat dev email list include a staging repo URL. In
 // addition to updating the url to match, you'll also need to update apacheTomcatVersion in gradle.properties.
@@ -142,6 +156,9 @@ allprojects {
                         // Mondrian dependencies are available via this repository. It's a direct dependency of the Query
                         // module but is declared here as many modules depend on Query and therefore need it as well.
                     	url "https://repo.orl.eng.hitachivantara.com/artifactory/pnt-mvn"
+                        content {
+                            excludeGroupByRegex "org\\.labkey.*"
+                        }
                     }
                 }
 
