--- a/build.gradle
+++ b/build.gradle
@@ -143,6 +143,7 @@ allprojects {
                             includeGroup "org.labkey"
                             includeGroup "org.labkey.api"
                             includeGroup "org.labkey.module"
+                            includeGroup "org.maccosslab"
                         }
                     }
 
