--- a/gradle.properties
+++ b/gradle.properties
@@ -12,7 +12,7 @@ org.gradle.parallel=true
 # (this could be memory-intensive)
 org.gradle.workers.max=3
 # Default to using 2GB of memory for the JVM.
-org.gradle.jvmargs=-Xmx2048m
+org.gradle.jvmargs=-Xmx2048m -XX:+UseParallelGC
 
 # Set the action to be performed when a version conflict between a dependency included from the build and one that already exists
 # is detected. Default behavior on detecting a conflict is to fail. Possible values are delete, fail, warn.
@@ -60,7 +60,7 @@ windowsProteomicsBinariesVersion=1.0
 # The current version numbers for the gradle plugins.
 artifactoryPluginVersion=4.31.9
 gradleNodePluginVersion=3.5.1
-gradlePluginsVersion=1.40.6
+gradlePluginsVersion=1.41.0
 owaspDependencyCheckPluginVersion=8.2.1
 versioningPluginVersion=1.1.0
 
