--- a/gradle.properties
+++ b/gradle.properties
@@ -1,8 +1,8 @@
 #moduleSet=all
 #ideaIncludeAllModules=true
-# Uncomment the following line to turn on Gradle's file watching, which may improve efficiency
-# https://blog.gradle.org/introducing-file-system-watching
-#org.gradle.vfs.watch=true
+# This controls Gradle's file system watching, which improves efficiency of incremental builds
+# https://docs.gradle.org/current/userguide/file_system_watching.html
+org.gradle.vfs.watch=true
 # This controls Gradle's build cache, which improves efficiency.
 # https://docs.gradle.org/current/userguide/build_cache.html
 org.gradle.caching=true
@@ -13,6 +13,8 @@ org.gradle.parallel=true
 org.gradle.workers.max=3
 # Default to using 2GB of memory for the JVM.
 org.gradle.jvmargs=-Xmx2048m -XX:+UseParallelGC
+# Uncomment to restrict the number of concurrent npm build tasks. Useful for systems with limited resources.
+#npmRunLimit=2
 
 # Set the action to be performed when a version conflict between a dependency included from the build and one that already exists
 # is detected. Default behavior on detecting a conflict is to fail. Possible values are delete, fail, warn.
