--- a/gradle.properties
+++ b/gradle.properties
@@ -8,11 +8,11 @@ org.gradle.vfs.watch=true
 org.gradle.caching=true
 # comment out or use --no-parallel to turn off parallel execution
 org.gradle.parallel=true
-# comment out and Gradle will attempt to determine the optimal number of executor threads to use
-# (this could be memory-intensive)
-org.gradle.workers.max=3
-# Default to using 2GB of memory for the JVM.
-org.gradle.jvmargs=-Xmx2048m -XX:+UseParallelGC
+# Gradle will attempt to determine the optimal number of executor threads to use.
+# Uncomment or add to global gradle properties to specify. Leaving default could be memory-intensive
+#org.gradle.workers.max=3
+# Default to using 4GB of memory for the JVM.
+org.gradle.jvmargs=-Xmx4g -XX:+UseParallelGC
 # Uncomment to restrict the number of concurrent npm build tasks. Useful for systems with limited resources.
 #npmRunLimit=2
 
