--- a/gradle/settings/all.gradle
+++ b/gradle/settings/all.gradle
@@ -11,7 +11,7 @@ buildscript {
             }
         }
         maven {
-            url "${artifactory_contextUrl}/plugins-release-no-proxy"
+            url "${artifactory_contextUrl}/plugins-release"
             mavenContent {
                 releasesOnly()
             }
