--- a/gradle/settings/ehr.gradle
+++ b/gradle/settings/ehr.gradle
@@ -7,7 +7,7 @@ buildscript {
             }
         }
         maven {
-            url "${artifactory_contextUrl}/plugins-release-no-proxy"
+            url "${artifactory_contextUrl}/plugins-release"
             mavenContent {
                 releasesOnly()
             }
