--- a/gradle/settings/distributions.gradle
+++ b/gradle/settings/distributions.gradle
@@ -7,14 +7,14 @@ buildscript {
             }
         }
         maven {
-            url "${artifactory_contextUrl}/plugins-release-no-proxy"
+            url "${artifactory_contextUrl}/plugins-release"
             mavenContent {
                 releasesOnly()
             }
-            content {
-                includeGroup "org.labkey.build"
-                includeGroup "org.labkey.versioning"
-            }
+//            content {
+//                includeGroup "org.labkey.build"
+//                includeGroup "org.labkey.versioning"
+//            }
         }
         if (gradlePluginsVersion.contains("SNAPSHOT"))
         {
@@ -24,10 +24,10 @@ buildscript {
                 mavenContent {
                     snapshotsOnly()
                 }
-                content {
-                    includeGroup "org.labkey.build"
-                    includeGroup "org.labkey.versioning"
-                }
+//                content {
+//                    includeGroup "org.labkey.build"
+//                    includeGroup "org.labkey.versioning"
+//                }
             }
 
         }
