--- a/gradle.properties
+++ b/gradle.properties
@@ -62,7 +62,7 @@ windowsProteomicsBinariesVersion=1.0
 # The current version numbers for the gradle plugins.
 artifactoryPluginVersion=4.31.9
 gradleNodePluginVersion=3.5.1
-gradlePluginsVersion=1.41.1-dependencyVersion-SNAPSHOT
+gradlePluginsVersion=1.41.1
 owaspDependencyCheckPluginVersion=8.2.1
 versioningPluginVersion=1.1.0
 
