Restore content includeGropus for gradle plugins repos

--- a/settings.gradle
+++ b/settings.gradle
@@ -8,14 +8,14 @@ pluginManagement {
             }
         }
         maven {
-            url "${artifactory_contextUrl}/plugins-release"
+            url "${artifactory_contextUrl}/plugins-release-no-proxy"
             mavenContent {
                 releasesOnly()
             }
-//            content {
-//                includeGroup "org.labkey.build"
-//                includeGroup "org.labkey.versioning"
-//            }
+            content {
+                includeGroup "org.labkey.build"
+                includeGroup "org.labkey.versioning"
+            }
         }
         if (gradlePluginsVersion.contains("SNAPSHOT") || versioningPluginVersion.contains("SNAPSHOT"))
         {
@@ -25,10 +25,10 @@ pluginManagement {
                 mavenContent {
                     snapshotsOnly()
                 }
-//                content {
-//                    includeGroup "org.labkey.build"
-//                    includeGroup "org.labkey.versioning"
-//                }
+                content {
+                    includeGroup "org.labkey.build"
+                    includeGroup "org.labkey.versioning"
+                }
             }
         }
     }
