--- a/server/configs/application.properties
+++ b/server/configs/application.properties
@@ -15,6 +15,11 @@ context.driverClassName[0]=@@jdbcDriverClassName@@
 context.url[0]=@@jdbcURL@@
 context.username[0]=@@jdbcUser@@
 context.password[0]=@@jdbcPassword@@
+context.maxTotal[0]=50
+context.maxIdle[0]=10
+context.maxWaitMillis[0]=120000
+context.accessToUnderlyingConnectionAllowed[0]=true
+context.validationQuery[0]=SELECT 1
 
 #context.dataSourceName[1]=jdbc/@@extraJdbcDataSource@@
 #context.driverClassName[1]=@@extraJdbcDriverClassName@@
