Issue 48426: Complaints from embedded Tomcat about work directory and scratchDir during startup

--- a/server/configs/application.properties
+++ b/server/configs/application.properties
@@ -30,6 +30,7 @@ context.validationQuery[0]=SELECT 1
 #context.webAppLocation=@@pathToServer@@/build/deploy/labkeyWebapp
 context.encryptionKey=@@encryptionKey@@
 #context.serverGUID=
+#context.workDirLocation=/path/to/desired/workDir
 
 mail.smtpHost=@@smtpHost@@
 mail.smtpPort=@@smtpPort@@
