--- a/qodana.yaml
+++ b/qodana.yaml
@@ -30,19 +30,19 @@ exclude:
       - server/modules/customModules
       - server/modules/platform/announcements
 #      - server/modules/platform/api
-#      - server/modules/platform/assay
+      - server/modules/platform/assay
       - server/modules/platform/audit
       - server/modules/platform/bigiron
-#      - server/modules/platform/core
+      - server/modules/platform/core
       - server/modules/platform/devtools
-#      - server/modules/platform/experiment
+      - server/modules/platform/experiment
       - server/modules/platform/filecontent
       - server/modules/platform/internal
       - server/modules/platform/issues
       - server/modules/platform/list
       - server/modules/platform/mothership
       - server/modules/platform/pipeline
-#      - server/modules/platform/query
+      - server/modules/platform/query
       - server/modules/platform/search
       - server/modules/platform/specimen
       - server/modules/platform/study
