--- a/gradle.properties
+++ b/gradle.properties
@@ -140,6 +140,9 @@ datadogVersion=0.108.1
 dom4jVersion=1.6.1
 
 ehcacheCoreVersion=2.6.8
+eigenbasePropertiesVersion=1.1.6
+eigenbaseResgenVersion=1.3.7
+eigenbaseXomVersion=1.3.7
 
 flyingsaucerVersion=R8
 
