--- a/server/configs/application.properties
+++ b/server/configs/application.properties
@@ -57,3 +57,14 @@ management.endpoints.web.exposure.include=*
 
 # Don't show the Spring banner on startup
 spring.main.banner-mode=off
+
+
+# Turn on JSON-formatted HTTP access logging to stdout. See issue 48565
+# https://tomcat.apache.org/tomcat-9.0-doc/config/valve.html#JSON_Access_Log_Valve
+#jsonaccesslog.enabled=true
+
+# Optional configuration, modeled on the non-JSON Spring Boot properties
+# https://docs.spring.io/spring-boot/docs/current/reference/html/application-properties.html#application-properties.server.server.tomcat.accesslog.buffered
+#jsonaccesslog.pattern=%h %t %m %U %s %b %D %S "%{Referer}i" "%{User-Agent}i" %{LABKEY.username}s
+#jsonaccesslog.condition-if=attributeName
+#jsonaccesslog.condition-unless=attributeName
